<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/navHome"
            android:icon="@drawable/homeic"
            android:title="@string/home" />
        <item
            android:checked="true"
            android:id="@+id/navAdminExam"
            android:icon="@drawable/exam"
            android:title="Create Alerts" />

        <item
            android:checkable="true"
            android:id="@+id/navTimeTable"
            android:icon="@drawable/timetableicon"
            android:title="@string/timetable" />

        <item
            android:checkable="true"
            android:id="@+id/navAdminSeat"
            android:icon="@drawable/seat_exam"
            android:title="Seat Allotment" />
        <item
            android:checkable="true"
            android:id="@+id/navResult"
            android:icon="@drawable/resultsicon"
            android:title="@string/publish_result" />

        <item
            android:checkable="true"
            android:id="@+id/navAdmin"
            android:icon="@drawable/complaintsicon"
            android:title="Manage Complaints"/>
        <item
            android:id="@+id/navUsers"
            android:checkable="true"
            android:icon="@drawable/profile_icon"
            android:title="Users"
            />
        <item
            android:checkable="true"
            android:id="@+id/AdminNavLogout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

</menu>